--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>PaintJs</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="app.js"></script>d
 </body>
 </html>
