--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>PaintJs</title>
 </head>
 <body>
-    <script src="app.js"></script>d
+    <canvas id="jsCanvas" css="canvas"></canvas>
+    <script src="app.js"></script>
 </body>
 </html>
