--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
     <title>PaintJs</title>
 </head>
 <body>
-    <canvas id="jsCanvas" css="canvas"></canvas>
+    <canvas id="jsCanvas" class="canvas"></canvas>
+    <div class="controls">
+        <div class="controls_range">
+            <input type="range" name="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1" />
+
+        </div>
+
+        <div class="controls_btns">
+            <button id="jsMode">Fill</button>
+            <button id="jsSave">Save</button>
+        </div>
+
+        <div class="controls_colors" id="jsColors">
+            <div class="controls_color" style="background-color: #2c2c2c ;"></div>
+            <div class="controls_color" style="background-color: #ffffff;"></div>
+            <div class="controls_color" style="background-color: #ff3B30;"></div>
+            <div class="controls_color" style="background-color: #ff9500;"></div>
+            <div class="controls_color" style="background-color: #ffcc00;"></div>
+            <div class="controls_color" style="background-color: #4cd963;"></div>
+            <div class="controls_color" style="background-color: #5ac8fa;"></div>
+            <div class="controls_color" style="background-color: #0579ff;"></div>
+            <div class="controls_color" style="background-color: #5856d6;"></div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
